<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="MainFram" Id="{da077ff2-1a6a-4544-bcb7-51be140c47d0}">
    <Declaration><![CDATA[TYPE MainFram :
STRUCT
	ComName			:STRING:='CYG_Vision';//公司名称
	ProjectName		:STRING:='Marimba';//项目名称	
	ShowTime		:STRING:='';//当前时间显示变量
	
	StartLamp		:BOOL;//启面急停动指示
	ResetLamp		:BOOL;//复面急停位指示
	StopLamp		:BOOL;//停面急停止，报错指示
	
	E_Stop			:BOOL:=TRUE;//界面急停显示
	Start			:BOOL;//界面启动
	Reset			:BOOL;//界面复位
	Stop			:BOOL;//界面停止
	
	GreenLamp		:BOOL;//界面启动按钮灯
	YellowLamp		:BOOL;//界面复位动按钮灯
	RedLamp			:BOOL;//界面停止动按钮灯
	
	Loading			:BOOL;//界面登录
	Quit			:BOOL;//界面退出
	versions		:STRING;//版本号
	RunStateTxt		:WSTRING;//运行状态
	ErrWTxtShow		:WSTRING;//错误状态
	CtrlMode		:ControlMode;//控制模式
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>